# spacecombatgame

./: CMakeLists.txt  README.md
source/engine/core/: array.h  hash.h  logger.h  string.h  types.h
source/engine/platform/: platform_system.cpp  platform_system.h  platform_types.h
source/engine/platform/linux/: platform_system_linux.cpp
source/engine/platform/macos/: platform_system_macos.cpp
source/engine/platform/windows/: platform_system_windows.cpp
source/engine/renderer/: renderer_system.cpp  renderer_system.h  renderer_types.h
source/engine/renderer/metal/: renderer_system_metal.cpp
source/engine/renderer/opengl/: renderer_system_opengl.cpp
source/engine/renderer/vulkan/: renderer_system_vulkan.cpp
source/game/: game.cpp
